tests/error/poly_errors/invalid_bound2.err
Error: Unrecognised Bound (at $FILE:5:19)
  | 
3 | 
4 | @guppy.struct
5 | class MyStruct[x: (42, 43)]:
  |                    ^^ Unrecognised type `42` as type bound.

Guppy compilation failed due to 1 previous error
